--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "moleculer-mixins-kit",
   "version": "0.0.1",
-  "description": "A moleculer helper(mixin)",
+  "description": "This makes Moleculer coding easier by taking the hassle out of working with models, brokers and etc",
   "main": "index.js",
   "scripts": {
     "deps": "npm-check -u",
