--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lodash": "^4.17.21"
   },
   "peerDependencies": {
-    "moleculer": "^0.14.0 || ^0.13.0 || ^0.12.0"
+    "moleculer": "^0.14.0 || ^0.13.0 || ^0.12.0",
+    "mongoose": "^6.2.7"
   },
   "engines": {
     "node": ">= 8.x.x"
