--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moleculer-mixins-kit",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "This makes Moleculer coding easier by taking the hassle out of working with models, brokers and etc",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,8 @@
   },
   "peerDependencies": {
     "moleculer": "^0.14.0 || ^0.13.0 || ^0.12.0",
-    "mongoose": "^6.2.7"
+    "mongoose": "^6.2.7",
+    "sequelize": "^6.13.0"
   },
   "engines": {
     "node": ">= 8.x.x"
