--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moleculer-mixins-kit",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "This makes Moleculer coding easier by taking the hassle out of working with models, brokers and etc",
   "main": "index.js",
   "scripts": {
@@ -16,12 +16,13 @@
   "author": "juandl",
   "license": "MIT",
   "dependencies": {
+    "kleur": "^4.1.4",
     "lodash": "^4.17.21"
   },
   "peerDependencies": {
+    "joi": "^17.6.0",
     "moleculer": "^0.14.0 || ^0.13.0 || ^0.12.0",
     "mongoose": "^6.2.7",
-    "joi": "^17.6.0",
     "sequelize": "^6.13.0"
   },
   "engines": {
