--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     // Types should go into this directory.
     // Removing this would place the .d.ts files
     // next to the .js files
-    "outFile": "src/types",
+    "outFile": "index",
     // go to js file when using IDE functions like
     // "Go to Definition" in VSCode
     "declarationMap": true,
