--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "moleculer-mixins-kit",
-  "version": "0.2.17",
+  "version": "0.2.18",
   "description": "This makes Moleculer coding easier by taking the hassle out of working with models, brokers and etc",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
     "deps": "npm-check -u",
     "lint": "eslint --ext=.js src",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "types-generate": "npx -p typescript tsc"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "moleculer",
